--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Sissor</title>
-    <script src = "javascript.js"></script>
+    <script src = "javascript.js" defer></script>
 </head>
 <body>
+    <button class ="Rock"> Rock </button>
+    <button class ="Paper"> Paper </button>
+    <button class ="Sissor"> Sissor </button>
+    <p class ="par"></p>
 
     
 </body>
